Add "unique" property to `@Column` and update schema synchronizer